[gd_scene load_steps=3 format=3 uid="uid://dfvd1r5vlhwwx"]

[ext_resource type="Script" uid="uid://byxpl6lyggal8" path="res://UI/pause_menu.gd" id="1_03fe5"]
[ext_resource type="FontFile" uid="uid://6wtxqi1tje8" path="res://assets/Fonts/Dead Revolver Typeface/Dead Revolver Typeface/Fonts/Game/OTF/DeadRevolverGame.otf" id="2_0b5ob"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_03fe5")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
offset_right = 512.0
offset_bottom = 768.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="GameTitleContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="GameTitleDrop" type="Label" parent="Panel/MarginContainer/GameTitleContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(170, 100)
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0.862745, 1, 1)
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = ExtResource("2_0b5ob")
theme_override_font_sizes/font_size = 60
text = "Pause"
horizontal_alignment = 2
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 50
alignment = 1

[node name="ResumeButton" type="Button" parent="Panel/MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_neighbor_bottom = NodePath("../AudioButton")
focus_next = NodePath("../AudioButton")
text = "Resume"

[node name="AudioButton" type="Button" parent="Panel/MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_neighbor_top = NodePath("../ResumeButton")
focus_neighbor_bottom = NodePath("../HowToPlayButton")
focus_next = NodePath("../HowToPlayButton")
focus_previous = NodePath("../ResumeButton")
text = "Audio"

[node name="HowToPlayButton" type="Button" parent="Panel/MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_neighbor_top = NodePath("../AudioButton")
focus_neighbor_bottom = NodePath("../MainMenuButton")
focus_next = NodePath("../MainMenuButton")
focus_previous = NodePath("../AudioButton")
text = "How to Play"

[node name="MainMenuButton" type="Button" parent="Panel/MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_neighbor_top = NodePath("../HowToPlayButton")
focus_previous = NodePath("../HowToPlayButton")
text = "Main Menu"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer2/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer2/AudioButton" to="." method="_on_audio_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer2/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer2/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
